# tslime

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml  deny.toml  flake.nix
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  pages.yml  release.yml
benches/: README.md  agent_benchmark.rs  diffusion_benchmark.rs  memory_benchmark.rs  rendering_benchmark.rs  trail_history_benchmark.rs
examples/: memory_benchmark.rs  memory_verification.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: agent.rs  diffusion.rs
proptest-regressions/simulation/: trail_map.txt
scripts/: build_windows_gui.ps1  check_tree_clean.sh  convert_ansi_to_png.py  convert_text_to_png.py  generate_gifs.sh  make_app_bundle.sh
src/: app.rs  app_config.rs  cli.rs  config_builder.rs  config_defaults.rs  config_manager.rs  error.rs  food_image.rs  keybind_manager.rs  lib.rs  main.rs  palette_manager.rs  preset_app_defaults.rs  preset_sim_defaults.rs  profile.rs  profile_overrides.rs  render_art_defaults.rs  validation.rs
src/app/: explanations.rs  mod.rs  runner.rs
src/audio/: mod.rs
src/exploration/: explorer.rs  metrics.rs  mod.rs
src/export/: gif.rs  mod.rs  png.rs  webm.rs
src/gui/: fonts.rs  mod.rs
src/overlay/: input.rs  input_manager.rs  layout.rs  mod.rs  state.rs  trait_impl.rs
src/render/: adaptive_brightness.rs  ambient.rs  ansi.rs  antialiasing.rs  border.rs  charset.rs  color_constants.rs  constants.rs  dither.rs  downsample.rs  error_diffusion.rs  gradients.rs  grid.rs  mod.rs  motion.rs  options_overlay.rs  overlay.rs  palette.rs  palette_editor.rs  panel.rs  ratatui_adapter.rs  theme.rs  transition.rs  window.rs  window_frame.rs
src/render/controls/: console.rs  field_plate.rs  mod.rs  registry.rs  tuner.rs  value.rs
src/render/widgets/: kit.rs  mod.rs  rowbuf.rs  state.rs
src/simulation/: agent.rs  config.rs  constants.rs  constellations.rs  food.rs  mod.rs  trail_map.rs
src/terminal/: control.rs  detection.rs  frame_buffer.rs  input.rs  mod.rs  output.rs  renderer.rs  screen.rs  signal.rs  state.rs  timing.rs
tests/: cli_integration.rs  integration_app.rs  preset_config_snapshot.rs  visual_regression.rs
tests/golden/: ascii_brightness.txt  ascii_hybrid.txt  ascii_mode.txt  aurora_preset.txt  auto_normalize.txt  bloom_preset.txt  braille_brightness.txt  braille_mode.txt  cosmic_palette.txt  cosmic_preset.txt  default_seed.txt  dither_mode.txt  drift_preset.txt  etching_preset.txt  ethereal_palette.txt  ethereal_preset.txt  exploratory_preset.txt  fire_preset.txt  forest_palette.txt  forge_preset.txt  fungus_palette.txt  gaussian_diffusion.txt  gossamer_preset.txt  heat_palette.txt  invert_palette.txt  lumen_preset.txt  minimal_preset.txt  mold_palette.txt  mold_preset.txt  moss_palette.txt  moss_preset.txt  motion_blur.txt  neon_palette.txt  network_preset.txt  ocean_palette.txt  organic_preset.txt  petridish_preset.txt  preset_configs.txt  quadrant_mode.txt  ripple_preset.txt  (+19 more)
tslime-wasm/: .gitignore  Cargo.toml  README.md  build.sh
tslime-wasm/examples/: index.html
tslime-wasm/examples/svelte-component/: Tslime.svelte
tslime-wasm/src/: lib.rs  renderer.rs
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  chrome.ts  controls.ts  data.ts  main.ts  terminal.ts
web/src/lib/: Tslime.svelte
