[package]
name = "tslime"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
rand_xoshiro = "0.6"
signal-hook = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gif = "0.11"
image = "0.24"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "agent_benchmark"
harness = false

[[bench]]
name = "diffusion_benchmark"
harness = false

[[bench]]
name = "rendering_benchmark"
harness = false

[[bench]]
name = "trail_history_benchmark"
harness = false

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
