[package]
name = "tslime"
version = "0.1.0"
edition = "2021"
authors = ["tslime contributors"]
description = "A lightweight terminal screensaver simulating slime mold growth patterns"
documentation = "https://docs.rs/tslime"
readme = "README.md"
homepage = "https://github.com/tamirelazar/tslime"
repository = "https://github.com/tamirelazar/tslime"
license = "MIT"
keywords = ["terminal", "screensaver", "slime-mold", "generative-art", "physarum"]
categories = ["command-line-utilities", "visualization", "simulation"]
rust-version = "1.70"
exclude = [
    ".github/",
    ".taskmaster/",
    "assets/demos/*.gif",
    "tests/golden/",
]

[dependencies]
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
rand = "0.8"
rand_xoshiro = "0.6"
signal-hook = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
gif = "0.11"
image = "0.24"
png = "0.17"
noise = "0.9"
memory-stats = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "agent_benchmark"
harness = false

[[bench]]
name = "diffusion_benchmark"
harness = false

[[bench]]
name = "rendering_benchmark"
harness = false

[[bench]]
name = "trail_history_benchmark"
harness = false

[[example]]
name = "memory_benchmark"

[[example]]
name = "memory_verification"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
