[package]
name = "tslime-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.tslime]
path = ".."

[[bin]]
name = "diffusion"
path = "fuzz_targets/diffusion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "agent"
path = "fuzz_targets/agent.rs"
test = false
doc = false
bench = false
