[package]
name = "tslime-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly build of tslime with WebGL2 rendering"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlTexture",
    "WebGlUniformLocation",
]

[dependencies.tslime]
path = ".."
default-features = false
features = []

